k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: voistra-server
  namespace: voistra
spec:
  type: ClusterIP
  selector:
    app: voistra-server
  ports:
    - name: http
      port: 80
      targetPort: 3000
